Test profile icon mobile fix

--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -126,6 +126,7 @@
   }
   .navbar {
     position: absolute;
+    overflow: visible;
     width: 112px;
     height: 78px;
   }
@@ -145,5 +146,6 @@
     position: absolute;
     right: 0;
     top: 0;
+    z-index: 10;
   }
 }
